include proper display

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,5 +2,5 @@ body {
   background-image: url(/img/background.jpg);
   background-size: cover;
   background-attachment: fixed;
-  color: white;
+  color: orange;
 }
